Fixed letterspacing issue

--- a/src/sass/myservice-globalnav.scss
+++ b/src/sass/myservice-globalnav.scss
@@ -163,7 +163,7 @@ header.ms-header {
   display: block;
   text-align: left;
   font-size: 16px;
-  letter-spacing: 20;
+  // letter-spacing: 1;
   padding: 10px 10px 10px 10px;
   border-bottom: 1px solid $blue-dark;
   color: $white;
